<resources>
    <string name="app_name">Decanting</string>
    <string name="level_one">Level one</string>
    <string name="level_two">Level Two</string>
    <string name="level_three">Level Three</string>
    <string name="level_four">Level Four</string>
    <string name="level_five">Level Five</string>

    <string name="level_six">Level Six</string>
    <string name="level_seven">Level Seven</string>
    <string name="level_eight">Level Eight</string>
    <string name="level_nine">Level Nine</string>
    <string name="level_ten">Level Ten</string>
    <string name="level_eleven">Level Eleven</string>
    <string name="play_now">Play Now</string>
    <string name="about">About</string>
    <string name="about_message">This app is created by Horatiu Lazu, a student at the University of Waterloo pursuing a degree in Computer Science. The purpose of this app is to allow players to enjoy the classic puzzle game of decanting, which involves players manipulating jugs of water to output a specific quantity. The solver engine was created using a top-down breadth-first-search algorithm that caches states to ensure performance. \n\nIf you have questions regarding the product, contact me at horatiulazu@gmail.com</string>
    <string name="level_selection">Level Selection</string>
    <string name="level_configuration">Level Configuration</string>
    <string name="zero">0</string>
    <string name="main_menu">Main Menu</string>
    <string name="highscores">Highscores</string>
    <string name="date">Date</string>
    <string name="performance_rating">Performance Rating</string>
    <string name="moves">Moves</string>
    <string name="player">Player</string>
    <string name="level">Level</string>
    <string name="level_three_text">LEVEL THREE</string>
    <string name="level_four_text">LEVEL FOUR</string>
    <string name="level_five_text">LEVEL FIVE</string>
    <string name="level_two_text">LEVEL TWO</string>
    <string name="level_one_text">LEVEL ONE</string>
    <string name="level_six_text">LEVEL SIX</string>
    <string name="level_seven_text">LEVEL SEVEN</string>
    <string name="level_eight_text">LEVEL EIGHT</string>
    <string name="level_nine_text">LEVEL NINE</string>
    <string name="level_ten_text">LEVEL TEN</string>
    <string name="custom_level">Custom Level</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="current_player_name">Current Player Name:</string>
    <string name="anonymous">Anonymous</string>
    <string name="adjust_difficulty">Adjust Difficulty</string>
    <string name="_5">5</string>
    <string name="level_generator_difficulty">Level Generator Difficulty:</string>
    <string name="adjust_player_name">Adjust Player Name</string>
    <string name="you_finished_in_0_moves_best_solution_is_0_moves">You finished in 0 moves. Best solution is 0 moves.</string>
</resources>
