<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.horatiu.decanting.Settings">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_player_name"
            android:id="@+id/textView5"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:paddingLeft="8dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/anonymous"
            android:id="@+id/playerName"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal|right" />

        <Button
            android:background="@drawable/roundshapebtn"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:paddingLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjust_player_name"
            android:onClick="adjustPlayerName"
            android:id="@+id/changeName"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/level_generator_difficulty"
            android:id="@+id/generatorDifficultyText"
            android:onClick="generatorDifficulty"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:paddingLeft="8dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/_5"
            android:id="@+id/generatorDifficulty"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal|right"
            android:numeric="integer" />

        <Button
            android:background="@drawable/roundshapebtn"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:paddingLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjust_difficulty"
            android:onClick="adjustDifficulty"
            android:id="@+id/button"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal" />
    </GridLayout>
</RelativeLayout>
