<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="3"
    android:background="@drawable/background_grey"
    tools:context="ca.horatiu.decanting.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:layout_centerHorizontal="true"
            android:textColor="#2196f3"
            android:textSize="@dimen/text_size_large" />

        <Button
            android:layout_above="@+id/highscores"

            android:background="@drawable/roundshapebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/highscores"
            android:layout_alignRight="@+id/highscores"
            android:text="@string/play_now"
            android:id="@+id/play"
            android:onClick="play"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <Button
            android:background="@drawable/roundshapebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:layout_centerHorizontal="true"
            android:id="@+id/highscores"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:onClick="highscores"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp" />

        <Button
            android:background="@drawable/roundshapebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/highscores"
            android:layout_alignRight="@+id/highscores"
            android:layout_below="@+id/highscores"
            android:id="@+id/settings"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:onClick="settings"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings"
            android:layout_alignLeft="@+id/highscores"
            android:layout_alignRight="@+id/highscores"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/roundshapebtn"

            android:text="@string/about"
            android:id="@+id/button3"
            android:onClick="about" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/highscores"
            android:src="@drawable/water_jug" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/highscores"
            android:src="@drawable/empty_jug" />
    </RelativeLayout>
</LinearLayout>
